2010-04-13  Jaroslav Hajek  <highegg@gmail.com>

	* Array-util.cc (gripe_invalid_assignment_size,
	gripe_assignment_dimension_mismatch): Move funcs here from Array.cc
	* Array-util.h: Declare them.
	* Array.cc: Remove them.

	* Sparse.cc (Sparse<T>::assign): New overloaded method.
	(Sparse<T>::operator =): Update.
	(Sparse<T>::resize1): Rewrite to match sparse assignment specifics.
	(Sparse<T>::set_index, Sparse<T>::clear_index, Sparse<T>::index_count,
	Sparse<T>::value): Remove methods.
	(::assign1, ::assign): Remove funcs.

	(INSTANTIATE_SPARSE): Move here from Sparse.h.

	* Sparse.h (Sparse<T>::idx, Sparse<T>::idx_count): Remove member
	fields. Remove initializations from all ctors.
	(Sparse<T>::get_idx): Remove.
	(Sparse<T>::assign): Add decls.
	(INSTANTIATE_SPARSE_ASSIGN, INSTANTIATE_SPARSE_AND_ASSIGN): Remove.
	(INSTANTIATE_SPARSE): Move to Sparse.cc

	* Sparse-C.cc, Sparse-d.cc, Sparse-b.cc: Only call INSTANTIATE_SPARSE.

	* idx-vector.cc (idx_vector::inverse_permutation): New method.
	* idx-vector.h: Declare it.

2010-04-12  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (Sparse<T>::Sparse (const Array<T>&, const idx_vector&,
	const idx_vector&, ...)): Call maybe_compress after matrix is created.

2010-04-09  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (Sparse<T>::diag): Change nzmax to nnz where appropriate.
	* MatrixType.cc (MatrixType::MatrixType): Ditto.
	* SparseQR.cc: Ditto.
	* SparseCmplxQR.cc: Ditto.
	* boolSparse.cc: Ditto.

2010-04-08  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (Sparse<T>::resize (octave_idx_type, octave_idx_type)):
	Rewrite. Be smarter esp. when resizing to more columns.

2010-04-08  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (dim_vector::concat): Ignore zero_by_zero, but not
	all_zero arrays in concatenation (like Matlab).

2010-04-07  Jaroslav Hajek  <highegg@gmail.com>

	* Sparse.cc (Sparse<T>::index (const idx_vector&, bool)): Use shallow
	copy when column is indexed by colon.
